---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: ???
  Changes:
    - Improved accuracy of beacon effects
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2025-06-13
  Changes:
    - Improved agricultural towers
    - Improved asteroid collectors
    - New API for GUI integration
    - Improved number formatting
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2025-06-09
  Features:
    - Get configuration of LuaEntity
    - Supports ghosts of all kinds (marked for deconstruction, marked for upgrade, module removal & insertion plans)
    - Enhance configurations with selection of fuel and fluid temperatures
    - Check multiple configurations for equality
    - Calculate production rates of configuration
    - Respect LuaSurface and LuaForce